@@ -3,8 +3,8 @@ package com.pc.weblibrarian.configuration;
 import com.pc.weblibrarian.Application;
 import com.vaadin.flow.spring.VaadinMVCWebAppInitializer;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 // import com.vaadin.flow.spring.VaadinMVCWebAppInitializer;
 
@@ -13,6 +13,7 @@ public class CustomWebAppInitializer extends VaadinMVCWebAppInitializer
     @Override
     protected Collection<Class<?>> getConfigurationClasses()
     {
-        return List.of(Application.class/*, PasswordEncoder.class, SecurityConfig.class*/);
+        // return List.of(Application.class/*, PasswordEncoder.class, SecurityConfig.class*/);
+        return Arrays.asList(Application.class/*, PasswordEncoder.class, SecurityConfig.class*/);
     }
 }
