@@ -15,6 +15,7 @@ import org.springframework.security.core.authority.mapping.GrantedAuthoritiesMap
 import org.springframework.security.core.userdetails.UserDetailsService;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -60,7 +61,8 @@ public class UserAuthenticationProvider extends DaoAuthenticationProvider
             Set<SimpleGrantedAuthority> grantedAuthorities = new HashSet<>();
             
             PersonRoleType[] availableRoles = PersonRoleType.getAvailableRoles(usere.getPersonRoleTypes());
-            List.of(availableRoles).forEach(d -> grantedAuthorities.add(new SimpleGrantedAuthority(PersonRoleType.getDisplayText(d))));
+            // List.of(availableRoles).forEach(d -> grantedAuthorities.add(new SimpleGrantedAuthority(PersonRoleType.getDisplayText(d))));
+           Arrays.asList(availableRoles).forEach(d -> grantedAuthorities.add(new SimpleGrantedAuthority(PersonRoleType.getDisplayText(d))));
             log.info("authorities -> " + grantedAuthorities.toString());
             usere.setLoginAttempts(1);
             usere.setLastLoginDateTime(LocalDateTime.now());
